--- a/site/sass/_index.scss
+++ b/site/sass/_index.scss
@@ -1,7 +1,8 @@
 ﻿body {
 	font-family: 'Open Sans', sans-serif;
 	overflow: hidden;
-	min-width: 54.000em;
+	min-width: 58.000em;
+	overflow-x: auto;
 }
 
 header {
